# Hausaufgabe

./: .gitignore  CMakeLists.txt  Form.cpp  Form.h  Form.hpp  Pupil.cpp  Pupil.h  Pupil.hpp  README.md  main.cpp  test.cpp
